# NeosFen

./: .gitignore  README.md  app.py  app2.py  app3.py  app4.py  app5.py  auth.token  neosfen.spec  pyproject.toml  requirements.txt  utilities.py
.github/workflows/: main.yaml  windows.yml
kv/: friendslist.kv  login.kv
neos/: classes.py  client.py  exceptions.py
screens/: friendlist.py  login.py
src/: app.py  classes.py  utilities.py
src/kv/: friendslist.kv
src/neos/: classes.py  client.py  exceptions.py
src/screens/: friendlist.py
