[tool.poetry]
name = "neosfen"
version = "0.1.1"
description = "NeosVR client experimentation for mainly show which contact is online"
authors = ["brodokk"]

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.27.1"
dacite = "^1.6.0"
python-dateutil = "^2.8.2"
docutils = "^0.18.1"
Kivy = "^2.1.0"
"kivy-deps.sdl2" = "^0.4.5"
"kivy-deps.glew" = "^0.3.1"
kivymd = "^0.104.2"
webcolors = "^1.11.1"
keyring = "^23.5.0"
Kivy-Garden = "^0.1.5"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
